--- a/assets/style.css
+++ b/assets/style.css
@@ -1,48 +1,54 @@
 h1 {
-    font-family: monospace;
-  }
+  font-family: monospace;
+}
 
-  .container {
-    width: 500px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin: auto;
-  }
+.container {
+  width: 500px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: auto;
+}
 
-  .box {
-    width: 150px;
-    height: 150px;
+.box {
+  width: 150px;
+  height: 150px;
+  background-color: teal;
+  margin: 1px;
+  border-radius: 10px;
+  transition: 0.5 all;
+  border: 10px, solid, teal;
+  animation-name: anim;
+  animation-duration: 4s;
+  box-shadow: 50px, 50px rgb(11, 11, 11);
+}
+
+.box:hover {
+  background-color: green;
+}
+
+.container:hover {
+  border-color: turquoise;
+}
+
+@keyframes anim {
+  0% {
     background-color: teal;
-    margin: 1px;
-    border-radius: 10px;
-    transition: 0.5 all;
-    border: 10px, solid, teal;
-    animation-name: anim;
-    animation-duration: 4s;
-    box-shadow: 4px, 4px plum;
   }
-
-  div:hover {
-    border-left: turquoise;
+  25% {
+    background-color: rgb(69, 139, 57);
   }
-
-  @keyframes anim {
-    0% {
-      background-color: teal;
-    }
-    25% {
-      background-color: rgb(69, 139, 57);
-    }
-    50% {
-      background-color: rgb(61, 61, 104);
-    }
-    100% {
-      background-color: rgb(158, 215, 158);
-    }
+  50% {
+    background-color: rgb(61, 61, 104);
   }
+  100% {
+    background-color: rgb(158, 215, 158);
+  }
+}
 
-  /* justify is used for the x axis. align for the y axis */
+/* justify is used for the x axis. align for the y axis */
 
-  body{background-color: rgba(125, 111, 218, 0.726);}
+body {
+  background-color: rgba(125, 111, 218, 0.726);
+}
